--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "lowdb": "^1.0.0",
     "body-parser": "^1.19.0",
     "pug": "^2.0.4",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "cookie-parser": "^1.4.5",
+    "md5": "^2.2.1",
+    "bcrypt": "^4.0.1"
   },
   "engines": {
     "node": "12.x"
