--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "shortid": "^2.2.15",
     "cookie-parser": "^1.4.5",
     "md5": "^2.2.1",
-    "bcrypt": "^4.0.1"
+    "bcrypt": "^4.0.1",
+    "cloudinary": "^1.21.0",
+    "multer": "^1.4.2",
+    "dotenv": "^8.2.0"
   },
   "engines": {
     "node": "12.x"
