--- a/package.json
+++ b/package.json
@@ -17,10 +17,7 @@
     "shortid": "^2.2.15",
     "cookie-parser": "^1.4.5",
     "md5": "^2.2.1",
-    "bcrypt": "^4.0.1",
-    "cloudinary": "^1.21.0",
-    "multer": "^1.4.2",
-    "dotenv": "^8.2.0"
+    "bcrypt": "^4.0.1"
   },
   "engines": {
     "node": "12.x"
